corrected the nav bar also in dark mode

--- a/assets/css/darkmode.css
+++ b/assets/css/darkmode.css
@@ -374,6 +374,7 @@ body.nav-active {
   z-index: 2;
   transition: 0.25s var(--cubic-in);
   visibility: hidden;
+  gap: 2rem;
 }
 
 .navbar.active {
@@ -396,12 +397,14 @@ body.nav-active {
 
 .navbar-item:not(:last-child) {
   border-block-end: 1px solid var(--black_10);
+  
 }
 
 .navbar-link {
   padding-block: 8px;
   transition: var(--transition);
   color: var(--light-gray);
+ 
 }
 
 .navbar-link:is(:hover, :focus-visible) {
@@ -1232,11 +1235,12 @@ body.nav-active {
   .navbar.active {
     all: unset;
     display: block;
+    margin-left: -23px;
   }
 
   .navbar-list {
     display: flex;
-    gap: 8px;
+    gap: rem;
   }
 
   .navbar-item:not(:last-child) {
@@ -1534,6 +1538,7 @@ button:hover {
   background: var(--black);
   border-radius: 50px;
   position: relative;
+  
 }
 
 .searchButton {
@@ -1570,6 +1575,8 @@ button:hover {
 }
 .searchInput::placeholder {
   color: var(--light-coral);
+ 
+
 }
 .searchInput {
   border: none;
@@ -1578,6 +1585,7 @@ button:hover {
   color: var(--light-coral);
   font-size: 15px;
   padding: 8px;
+  padding-left: 13px;
 }
 
 .svgxml {
